# new_mlops

./: README.md  pyproject.toml
HW1/: .env.shared  .gitignore  pyproject.toml
HW1/mlops-wine/: app.py  services.py  settings.py
HW1/mlops-wine/api/: __init__.py  server.py
HW2/: .env.shared  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
HW2/mlops_wine/: helpers.py  services.py  settings.py
HW2/mlops_wine/api/: parsers.py  server.py  validators.py
HW2/mlops_wine/db/: db.py  models.py
HW2/mlops_wine/models/: Model.py
HW2/postgres/: createdb.sql
