[tool.poetry]
name = "mlops-2"
version = "0.1.0"
description = ""
authors = ["Skovorodko <81248953+Skovorodko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mlops_2"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
